[gd_scene load_steps=5 format=4 uid="uid://b87als3d3rs7n"]

[ext_resource type="Script" uid="uid://idf0f1ykdioa" path="res://Levels/Level.gd" id="1_8tn3h"]
[ext_resource type="TileSet" uid="uid://cp3h1xh3mnvam" path="res://assets/tiles/level_01.tres" id="3_f8o56"]
[ext_resource type="PackedScene" uid="uid://dwoyt67p86stw" path="res://actors/enemies/skelMunsta/skelMunsta.tscn" id="5_ocwms"]
[ext_resource type="PackedScene" uid="uid://c5mn46uie1m02" path="res://things/ActorSpawn/ActorSpawn.tscn" id="6_8q3i6"]

[node name="Level_01" type="Node2D"]
process_mode = 1
script = ExtResource("1_8tn3h")

[node name="Tiles" type="TileMapLayer" parent="."]
position = Vector2(128, 111)
tile_map_data = PackedByteArray("AADw//f/AQAAAAAAAQDw//j/AQAAAAAAAQDw//n/AQAAAAAAAQDw//r/AQAAAAAAAQDw//v/AQAAAAAAAQDw//z/AQAAAAAAAQDw//3/AQAAAAAAAQDw//7/AQAAAAAAAQDw////AQAAAAAAAQDw/wAAAQAAAAAAAQDw/wEAAQAAAAAAAQDw/wIAAQAAAAAAAQDw/wMAAQAAAAAAAQDw/wQAAQAAAAAAAQDw/wUAAQAAAAAAAQDw/wYAAQAAAAAAAQDw/wcAAQAAAAAAAQDw/wgAAQAAAAAAAQDw/wkAAQAAAAAAAQDw/woAAQAAAAAAAQDw/wsAAQAAAAAAAQDw/wwAAQAAAAAAAQDx//f/AQAAAAAAAQDx//j/AQAAAAAAAQDx//n/AQAAAAAAAQDx//r/AQAAAAAAAQDx//v/AQAAAAAAAQDx//z/AQAAAAAAAQDx//3/AQAAAAAAAQDx//7/AQAAAAAAAQDx////AQAAAAAAAQDx/wAAAQAAAAAAAQDx/wEAAQAAAAAAAQDx/wIAAQAAAAAAAQDx/wMAAQAAAAAAAQDx/wQAAQAAAAAAAQDx/wUAAQAAAAAAAQDx/wYAAQAAAAAAAQDx/wcAAQAAAAAAAQDx/wgAAQAAAAAAAQDx/wkAAQAAAAAAAQDx/woAAQAAAAAAAQDx/wsAAQAAAAAAAQDx/wwAAQAAAAAAAQDy/wwAAQAAAAAAAADz/wwAAQAAAAAAAAD8/wwAAQAAAAAAAAADAAwAAQAAAAAAAAAEAAwAAQAAAAAAAAAFAAwAAQAAAAAAAAAGAAwAAQAAAAAAAAAHAAwAAQAAAAAAAAAIAAwAAQAAAAAAAAAJAAwAAQAAAAAAAAAKAAwAAQAAAAAAAAALAAwAAQAAAAAAAAAMAAwAAQAAAAAAAAANAAwAAQAAAAAAAAAOAPf/AQAAAAAAAQAOAPj/AQAAAAAAAQAOAPn/AQAAAAAAAQAOAPr/AQAAAAAAAQAOAPv/AQAAAAAAAQAOAPz/AQAAAAAAAQAOAP3/AQAAAAAAAQAOAP7/AQAAAAAAAQAOAP//AQAAAAAAAQAOAAAAAQAAAAAAAQAOAAEAAQAAAAAAAQAOAAIAAQAAAAAAAQAOAAMAAQAAAAAAAQAOAAQAAQAAAAAAAQAOAAUAAQAAAAAAAQAOAAYAAQAAAAAAAQAOAAcAAQAAAAAAAQAOAAgAAQAAAAAAAQAOAAkAAQAAAAAAAQAOAAoAAQAAAAAAAQAOAAsAAQAAAAAAAQAOAAwAAQAAAAAAAQAPAPf/AQAAAAAAAQAPAPj/AQAAAAAAAQAPAPn/AQAAAAAAAQAPAPr/AQAAAAAAAQAPAPv/AQAAAAAAAQAPAPz/AQAAAAAAAQAPAP3/AQAAAAAAAQAPAP7/AQAAAAAAAQAPAP//AQAAAAAAAQAPAAAAAQAAAAAAAQAPAAEAAQAAAAAAAQAPAAIAAQAAAAAAAQAPAAMAAQAAAAAAAQAPAAQAAQAAAAAAAQAPAAUAAQAAAAAAAQAPAAYAAQAAAAAAAQAPAAcAAQAAAAAAAQAPAAgAAQAAAAAAAQAPAAkAAQAAAAAAAQAPAAoAAQAAAAAAAQAPAAsAAQAAAAAAAQAPAAwAAQAAAAAAAQD0/wwAAQAAAAAAAAD1/wwAAQAAAAAAAAACAAwAAQAAAAAAAAABAAwAAQAAAAAAAAAAAAwAAQAAAAAAAAD//wwAAQAAAAAAAAD9/wwAAQAAAAAAAAD+/wwAAQAAAAAAAAAPAPD/AQAMAA8AAAD4//z/AQAAAAAABQD5//z/AQAAAAAABQD6//z/AQAAAAAABQD7//z/AQAAAAAABQD8//z/AQAAAAAABQD9//z/AQAAAAAABQD+//z/AQAAAAAABQD///z/AQAAAAAABQAAAPz/AQAAAAAABQABAPz/AQAAAAAABQACAPz/AQAAAAAABQADAPz/AQAAAAAABQAEAPz/AQAAAAAABQAFAPz/AQAAAAAABQAGAPz/AQAAAAAABQAHAPz/AQAAAAAABQD4/wEAAQAAAAAABQD5/wEAAQAAAAAABQD6/wEAAQAAAAAABQD7/wEAAQAAAAAABQD8/wEAAQAAAAAABQD9/wEAAQAAAAAABQD+/wEAAQAAAAAABQD//wEAAQAAAAAABQAAAAEAAQAAAAAABQABAAEAAQAAAAAABQACAAEAAQAAAAAABQADAAEAAQAAAAAABQAEAAEAAQAAAAAABQAFAAEAAQAAAAAABQAGAAEAAQAAAAAABQAHAAEAAQAAAAAABQD4/wYAAQAAAAAABQD5/wYAAQAAAAAABQD6/wYAAQAAAAAABQD7/wYAAQAAAAAABQD8/wYAAQAAAAAABQD9/wYAAQAAAAAABQD+/wYAAQAAAAAABQD//wYAAQAAAAAABQAAAAYAAQAAAAAABQABAAYAAQAAAAAABQACAAYAAQAAAAAABQADAAYAAQAAAAAABQAEAAYAAQAAAAAABQAFAAYAAQAAAAAABQAGAAYAAQAAAAAABQAHAAYAAQAAAAAABQDy/wYAAQAAAAAABQDz/wYAAQAAAAAABQDy/wEAAQAAAAAABQDz/wEAAQAAAAAABQDy//z/AQAAAAAABQDz//z/AQAAAAAABQAMAPz/AQAAAAAABQANAPz/AQAAAAAABQAMAAEAAQAAAAAABQANAAEAAQAAAAAABQAMAAYAAQAAAAAABQANAAYAAQAAAAAABQDw//T/AQAAAAAAAQDw//X/AQAAAAAAAQDx//T/AQAAAAAAAQDx//X/AQAAAAAAAQAOAPH/AQAMAA8AAAAOAPL/AQAMAA8AAAAOAPP/AQAAAAAAAQAOAPT/AQAAAAAAAQAOAPX/AQAAAAAAAQAPAPH/AQAMAA8AAAAPAPL/AQAMAA8AAAAPAPP/AQAAAAAAAQAPAPT/AQAAAAAAAQAPAPX/AQAAAAAAAQDw//P/AQAAAAAAAQDx//P/AQAAAAAAAQDy//P/AQAAAAAAAQDz//P/AQAAAAAAAQD0//P/AQAAAAAAAQD1//P/AQAAAAAAAQD2//P/AQAAAAAAAQD3//P/AQAAAAAAAQD4//P/AQAAAAAAAQD5//P/AQAAAAAAAQD6//P/AQAAAAAAAQD7//P/AQAAAAAAAQD8//P/AQAAAAAAAQD9//P/AQAAAAAAAQD+//P/AQAAAAAAAQD///P/AQABAAAAAAAAAPP/AQACAAAAAAABAPP/AQAAAAAAAQACAPP/AQAAAAAAAQADAPP/AQAAAAAAAQAEAPP/AQAAAAAAAQAFAPP/AQAAAAAAAQAGAPP/AQAAAAAAAQAHAPP/AQAAAAAAAQAIAPP/AQAAAAAAAQAJAPP/AQAAAAAAAQAKAPP/AQAAAAAAAQALAPP/AQAAAAAAAQAMAPP/AQAAAAAAAQANAPP/AQAAAAAAAQAOAPD/AQAMAA8AAADw//b/AQAAAAAAAADx//b/AQAAAAAAAAAOAPb/AQAAAAAAAAAPAPb/AQAAAAAAAAA=")
tile_set = ExtResource("3_f8o56")

[node name="Bubble_Destination" type="Marker2D" parent="."]
position = Vector2(128, 56)
gizmo_extents = 40.0

[node name="Level_Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="Hurry_Enemy_spawn" parent="." instance=ExtResource("6_8q3i6")]
position = Vector2(48, 56)
spawn_defer_time = 2.0
actorStayPut = false
ActorScene = ExtResource("5_ocwms")

[node name="Destination" parent="Hurry_Enemy_spawn" index="0"]
position = Vector2(0, 0)

[node name="Icon" parent="Hurry_Enemy_spawn" index="1"]
region_rect = Rect2(5, 257, 16, 16)

[node name="Defer_Timer" parent="Hurry_Enemy_spawn" index="2"]
wait_time = 2.0

[node name="Enemy_Spawns" type="Node" parent="."]

[node name="ActorSpawn" parent="Enemy_Spawns" node_paths=PackedStringArray("spawn_node") instance=ExtResource("6_8q3i6")]
position = Vector2(128, -32)
spawn_defer_time = 0.5
spawn_node = NodePath("../../Enemies")
actorStayPut = false

[node name="Destination" parent="Enemy_Spawns/ActorSpawn" index="0"]
position = Vector2(0, 84)

[node name="Defer_Timer" parent="Enemy_Spawns/ActorSpawn" index="2"]
wait_time = 0.5

[node name="ActorSpawn2" parent="Enemy_Spawns" node_paths=PackedStringArray("spawn_node") instance=ExtResource("6_8q3i6")]
position = Vector2(128, -32)
spawn_defer_time = 0.5
spawn_node = NodePath("../../Enemies")
actorStayPut = false

[node name="Destination" parent="Enemy_Spawns/ActorSpawn2" index="0"]
position = Vector2(0, 101)

[node name="Defer_Timer" parent="Enemy_Spawns/ActorSpawn2" index="2"]
wait_time = 0.5

[node name="ActorSpawn3" parent="Enemy_Spawns" node_paths=PackedStringArray("spawn_node") instance=ExtResource("6_8q3i6")]
position = Vector2(128, -32)
spawn_defer_time = 0.5
spawn_node = NodePath("../../Enemies")
actorStayPut = false

[node name="Destination" parent="Enemy_Spawns/ActorSpawn3" index="0"]
position = Vector2(0, 64)

[node name="Defer_Timer" parent="Enemy_Spawns/ActorSpawn3" index="2"]
wait_time = 0.5

[node name="Enemies" type="Node" parent="."]

[node name="Player_Spawns" type="Node" parent="."]

[node name="p1_Start" type="Node2D" parent="Player_Spawns"]
position = Vector2(32, 192)

[editable path="Hurry_Enemy_spawn"]
[editable path="Enemy_Spawns/ActorSpawn"]
[editable path="Enemy_Spawns/ActorSpawn2"]
[editable path="Enemy_Spawns/ActorSpawn3"]
